[package]

name = "qiniu"
version = "0.0.1"
description = "Qiniu Resource (Cloud) Storage SDK for Rust."
readme = "README.md"
documentation = "http://developer.qiniu.com"
repository = "https://github.com/longbai/rust-sdk"
license = "MIT"
authors = ["Bai Long <slongbai@gmail.com>"]
keywords = ["qiniu", "storage", "sdk", "cloud"]

[dependencies]
hyper = "*"
rustc-serialize = "*"
crc = "^1.0.0"

[dev-dependencies]
env_logger = "*"

[[bin]]

name = "qiniu"
