[package]

name = "qiniu"
version = "0.1.0"
description = "Qiniu Resource (Cloud) Storage SDK for Rust."
readme = "README.md"
documentation = "http://developer.qiniu.com"
repository = "https://github.com/qiniu/rust-sdk"
license = "MIT"
keywords = ["qiniu", "storage", "sdk", "cloud"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
hmac = "0.7.1"
crypto-mac = "0.7.0"
sha-1 = "0.8.1"
url = "2.1.0"
base64 = "0.10.1"
lazy_static = "1.4.0"
rand = "0.3"

[dev-dependencies]
env_logger = "*"
